<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/sunrise">
<ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
<LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnOn"
            android:id="@+id/start"
            android:textColor="#3C1414"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnOff"
            android:id="@+id/end"
            android:textColor="#3C1414"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/startTime"
            android:textColor="#3C1414"
            android:textSize="18sp"
            android:id="@+id/textView"/>
    <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SetSilenceTime"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/endTime"
            android:textColor="#3C1414"
            android:textSize="18sp"
            android:id="@+id/textView2"/>
    <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SetUnsilenceTime"/>
</LinearLayout>
</ScrollView>
</LinearLayout>