<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/sunrise">
<ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
<LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firstPageTextStart"
            android:textSize="48sp"
            android:textColor="#3C1414"
            android:id="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center"
            android:textSize="48sp"
            android:focusable="false"
            android:longClickable="false"
            android:textColor="#3C1414"
            android:id="@+id/timeStart"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firstPageTextEnd"
            android:textSize="48sp"
            android:textColor="#3C1414"
            android:id="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="48sp"
            android:ems="10"
            android:focusable="false"
            android:longClickable="false"
            android:textColor="#3C1414"
            android:id="@+id/timeEnd"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeSettings"
            android:id="@+id/changeSettings"
            android:textColor="#3C1414"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"/>
</LinearLayout>
</ScrollView>
</LinearLayout>